<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyApp</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="forget_password">Forget password?</string>
    <string name="dont_have_account_join_with_us">Dont have account? Join with us.</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="re_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="already_have_an_account">Already have an account?</string>

    <string name="join_us">JOIN US</string>
    <string name="home">Home</string>
    <string name="scan">Scan</string>
    <string name="profile">Profile</string>
    <string name="nothing_to_read">Nothing to read</string>
    <string name="success">Success</string>
    <string name="get_permission">Please get permission</string>
    <string name="logout">Log out</string>
    <string name="addproduct">Add product</string>
    <string name="facebook_app_id">1381474148627910</string>
    <string name="tap_to_quick_insert_barcode">Tap to quick insert Barcode</string>
    <string name="cart">Cart</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="product_name">Product Name</string>
    <string name="barcode_id">Barcode ID</string>
    <string name="place">Place</string>
    <string name="price">Price</string>
    <string name="get_image_from_folder">Get image from folder</string>
    <string name="add">Add</string>
    <string-array name="place_array">
        <item>Circle K</item>
        <item>Family Mart</item>
        <item>Ministop</item>
    </string-array>
    <!-- For facebook share hash key : L2wX3+g06G8h8Pz9sGUHvo5zwno= and qnxLvS/aavdBLg48+YpJ3GxNqBE= -->
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fb_login_protocol_scheme">fb1381474148627910</string>
    <string name="product">Product</string>
    <string name="language">Language</string>
    <string name="select_l">Select a language</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total:</string>
    <string name="your_cart">Your cart</string>
    <string name="back">Back</string>
    <string name="upload">Uploading</string>
    <string name="please_wait">Please wait</string>
    <string name="please_fill_the_blank">Please fill in the blank</string>
    <string name="please_sign_in">Please sign in</string>
    <string name="please_choose_image_from_local_folder">Please choose the image from local folder</string>
    <string name="please_turn_on_the_internet">Please turn on the internet</string>
    <string name="please_enter_the_quantity">Please enter the quantity</string>
    <string name="please_choose_the_price">Please choose the price</string>
    <string name="insert_successfully">Insert successfully</string>
    <string name="unsuccessful">Unsuccessful</string>
    <string name="update_sucessful">Update successful</string>
    <string name="please_enter_a_valid_email">Please enter a valid email.</string>
    <string name="email_is_required">Email is required.</string>
    <string name="email_sent">An email has been sent to your email address</string>
    <string name="password_required">Password is required.</string>
    <string name="password_length">Password length must be at least 8.</string>
    <string name="confirm_password_wrong">Confirm password is wrong.</string>
    <string name="register_success">Register Success.</string>
    <string name="email_already_registered">This email is already registered.</string>
    //Profile
    <string name="defaultName">Unknow</string>
    <string name="defaultType">User</string>
    <string name="submit">Submit</string>
    <string name="share">Share</string>

    <string name="changePass">Change password</string>

    <string name="toast_no_email">There is no registered user corresponding to this email.</string>
    <string name="toast_wrong_password">The password is invalid.</string>
    <string name="barcode">Barcode</string>
    <string name="search">Search...</string>
    <string name="swipe_from_left_to_right_to_open_menu">Swipe from left to right to open menu</string>
    <string name="password_updated">Password updated</string>
  <string name="error_updating">Error updating</string>
</resources>