<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        >
        <ImageView
            android:layout_weight="1"
            android:background="@drawable/login_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

<LinearLayout
    android:id="@+id/LayoutInput"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#FFF"
    android:layout_below="@+id/btn_getImage"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name" />
    <EditText
        android:id="@+id/input_name"
        android:drawableEnd="@drawable/ic_person_outline_black_24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/barcode_id"/>

    <EditText
        android:id="@+id/input_id"
        android:drawableEnd="@drawable/barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place"/>
    <Spinner
        android:id="@+id/spinner_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"/>

    <EditText
        android:drawableEnd="@drawable/calendar"
        android:id="@+id/input_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />


    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:background="@drawable/background_login"
        style="@style/Base.TextAppearance.AppCompat.Body1"/>


</LinearLayout>

<ImageView
    android:id="@+id/image"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_centerHorizontal="true"


    android:layout_marginTop="10dp"/>

<Button

    android:layout_below="@+id/image"
    android:layout_width="250dp"
    android:layout_height="60dp"
    android:layout_centerHorizontal="true"
    android:id="@+id/btn_getImage"
    android:layout_marginTop="10dp"
    android:text="@string/get_image_from_folder"
    android:textColor="#FFFFFF"
    android:background="@drawable/background_login"
    style="@style/Base.TextAppearance.AppCompat.Body1"
    />




</RelativeLayout>