<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Your cart"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textAlignment="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/product"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/price"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/quantity"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <ListView
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="330dp"

    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total:"
            android:textSize="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_gravity="end"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:textSize="50dp"
            android:textColor="#f21313"
            android:text="10000000"
            android:id="@+id/total"/>
    </LinearLayout>
</LinearLayout>

