<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:background="@drawable/new_login_gradients">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="240dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="48dp"
                android:padding="16dp" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#00b6d6" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:padding="8dp">
                <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_lock_white_24dp"
                    android:drawableTint="@color/white"
                    android:ems="10"
                    android:drawablePadding="12dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="#fff"
                    android:paddingRight="35dp"/>
                <ImageButton
                    android:id="@+id/imageButton_passwordReveal"
                    android:src="@drawable/eye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-30dp"
                    android:background="@null"
                    android:tint="@color/white"
                    />
            </LinearLayout>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#00b6d6"
                android:layout_marginBottom="20dp"/>

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <Button
                android:id="@+id/button_signIn"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_login"
                android:clickable="true"
                android:padding="15dp"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/textView_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:text="@string/dont_have_account_join_with_us"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView_passwordReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:text="@string/forget_password"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>