<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#555">


            <RelativeLayout
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="180sp"
                android:background="#9999">

                <Spinner
                    android:id="@+id/spinner_menu"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/settings" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/background"
                android:layout_marginStart="20sp"
                android:layout_marginTop="-50sp"
                android:orientation="vertical"
                android:layout_centerHorizontal="true">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="110sp"
                    android:layout_height="110sp"
                    android:background="@drawable/circular_avatar"
                    android:layout_gravity="center" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="24dp"
                    android:layout_gravity="bottom">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/defaultName"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/defaultType"
                        android:textSize="18sp"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="285sp"
                android:orientation="vertical"
                android:padding = "15sp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:background="@android:color/transparent"
                        android:drawablePadding="12dp"
                        android:padding="8dp"
                        android:textColor="#000"
                        android:maxLines="1"
                        android:textColorHint="@color/white"
                        android:drawableLeft="@drawable/ic_email_white_24dp"
                        android:text=""/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#00b6d6"
                        android:layout_marginBottom="15sp"/>


                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:background="@android:color/transparent"
                        android:drawablePadding="12dp"
                        android:padding="8dp"
                        android:textColor="#000"
                        android:maxLines="1"
                        android:textColorHint="@color/white"
                        android:drawableLeft="@drawable/ic_phone_white_24dp"
                        android:text=""/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#00b6d6"
                        android:layout_marginBottom="15sp"/>

                    <EditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:background="@android:color/transparent"
                        android:drawablePadding="12dp"
                        android:padding="8dp"
                        android:textColor="#000"
                        android:maxLines="1"
                        android:textColorHint="@color/white"
                        android:drawableLeft="@drawable/ic_email_white_24dp"
                        android:text=""/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#00b6d6"
                        android:layout_marginBottom="15sp"/>


                    <Button
                        android:id="@+id/button_submit"
                        android:layout_width="150sp"
                        android:layout_height="50sp"
                        android:textAllCaps="true"
                        android:padding="15dp"
                        android:text="@string/submit"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/background_login"
                        style="@style/Base.TextAppearance.AppCompat.Body1"/>
            </LinearLayout>

</RelativeLayout>
